--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                 <div class = "social-icons">
                     <ul>
                         <li>
-                            <a href= "#"><i class = "fab fa-facebook"></i></a>
+                            <a href= "https://www.facebook.com/lasuinfo"><i class = "fab fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href= "#"><i class = "fab fa-twitter"></i></a>
+                            <a href= "https://www.twitter.com/lasuofficial"><i class = "fab fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href= "#"><i class = "fab fa-instagram"></i></a>
+                            <a href= "https://www.instagram.com/lasuofficial"><i class = "fab fa-instagram"></i></a>
                         </li>
                         <li>
-                            <a href= "#"><i class = "fab fa-youtube"></i></a>
+                            <a href= "https://www.youtube.com/@lagosstateuniversityoffici6418"><i class = "fab fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -78,13 +78,13 @@
                 </button>
 
                 <div class = "current-news-head">
-                    <h3>2024/2025 online admission screening exercise for 100 level (regular and regular with entrepreneurship) and direct entry candidates<span>by LASU</span></h3>
+                    <h3><a href="https://lasu.edu.ng/home/news/read.php?id=468">2024/2025 online admission screening exercise for 100 level (regular and regular with entrepreneurship) and direct entry candidates<span>by LASU</span></a></h3>
 
-                    <h3>Nationwide Protest: University management directs staff and students to resume on tuesday, 6th august 2024<span>by LASU</span></h3>
+                   <a href="https://lasu.edu.ng/home/news/read.php?id=467"> <h3>Nationwide Protest: University management directs staff and students to resume on tuesday, 6th august 2024<span>by LASU</span></h3></a>
 
-                    <h3>For the first time in history, four (4) LASU alumni make SAN list in a single year <span>by LASU</span></h3>
+                    <a href="https://lasu.edu.ng/home/news/read.php?id=466"><h3>For the first time in history, four (4) LASU alumni make SAN list in a single year <span>by LASU</span></h3></a>
 
-                    <h3>Admission into part time degree programmes for 2023/2024 academic session<span>by LASU</span></h3>
+                    <a href="https://lasu.edu.ng/home/news/read.php?id=465"><h3>Admission into part time degree programmes for 2023/2024 academic session<span>by LASU</span></h3></a>
                 </div>
             </div>
 
@@ -97,7 +97,7 @@
 
                         <h3>by LASU</h3>
                         <p>The Lagos State University School of Part-Time Studies invites applications from suitably qualified candidates.. </p>
-                        <a href = "#">Read More</a>
+                        <a href = "https://lasu.edu.ng/home/news/read.php?id=465">Read More</a>
                     </div>
                 </div>
 
@@ -109,7 +109,7 @@
 
                         <h3>by LASU</h3>
                         <p>In view of the planned nationwide protest scheduled to commence on Thursday, 1st August 2024, the University Management...</p>
-                        <a href = "#">Read More</a>
+                        <a href = "https://lasu.edu.ng/home/news/read.php?id=464">Read More</a>
                     </div>
                 </div>
 
@@ -121,7 +121,7 @@
 
                         <h3>New Topic 1</h3>
                         <p>Lagos State University School of Part Time Studies hereby invites applications from suitably qualified..</p>
-                        <a href = "#">Read More</a>
+                        <a href = "https://lasu.edu.ng/home/news/read.php?id=463">Read More</a>
                     </div>
                 </div>
 
@@ -134,7 +134,7 @@
 
                         <h3>by LASU</h3>
                         <p>The Vice Chancellor, Lagos State University, Prof. Ibiyemi Olatunji-Bello, mni, NPOM, celebrates former Vice Chancellor of the University, Prof. Oladapo...</p>
-                        <a href = "#">Read More</a>
+                        <a href = "https://lasu.edu.ng/home/news/read.php?id=460">Read More</a>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
 
                             <p>ADMISSION INTO FULL AND PART TIME POSTGRADUATE PROGRAMMES FOR THE 2020/2021 ACADEMIC SESSION...</p>
 
-                            <a href = "#">Read More <span>>></span></a>
+                            <a href = "https://lasu.edu.ng/home/news/read.php?id=273">Read More <span>>></span></a>
                         </div>
                     </article>
                 </div>
@@ -167,7 +167,7 @@
                             <h3>LASU UNDERGRADUATE ADMISSION LIST FOR 2020/2021 ACADEMIC SESSION </h3>
                         </p>This is to inform all candidates who participated in Lagos State University (LASU) Online Admission Screening Exercise that..</p>
 
-                            <a href = "#">Read More <span>>></span></a>
+                            <a href = "https://lasu.edu.ng/home/news/read.php?id=50">Read More <span>>></span></a>
                         </div>
                     </article>
 
@@ -177,7 +177,7 @@
                             <h3>ADMISSION INTO FULL AND PART TIME POSTGRADUATE PROGRAMMES FOR THE 2020/2021 ACADEMIC SESSION</h3>
                             <p>The Postgraduate School invites applications from suitably qualified Candidates for admission into its Various Postgraduate Programmes...</p>
 
-                            <a href = "#">Read More <span>>></span></a>
+                            <a href = "https://lasu.edu.ng/home/news/read.php?id=31">Read More <span>>></span></a>
                         </div>
                     </article>
                 </div>
@@ -217,7 +217,7 @@
 
                         <p>Applications are invited from suitably qualified candidates for the Lagos State University 2024/2025 Admission Screening Exercise...</p>
 
-                        <a href = "#">Read More <span>>></span></a>
+                        <a href = "https://lasu.edu.ng/home/news/read.php?id=468">Read More <span>>></span></a>
                     </div>
                     <img src = "https://lasu.edu.ng/home/newsimage/1-1723105868.jpg">
                 </article>
@@ -229,7 +229,7 @@
 
                         <p>The University Management, having reviewed the prevailing situation in the State regarding the ongoing nationwide hunger protest...</p>
 
-                        <a href = "#">Read More <span>>></span></a>
+                        <a href = "https://lasu.edu.ng/home/news/read.php?id=467">Read More <span>>></span></a>
                     </div>
                     <img src = "https://lasu.edu.ng/home/newsimage/1-1722879179.jpg">
                 </article>
@@ -241,7 +241,7 @@
 
                         <p>For the first time in history, four (4) LASU alumni make SAN list in a single year</p>
 
-                        <a href = "#">Read More <span>>></span></a>
+                        <a href = "https://lasu.edu.ng/home/news/read.php?id=466">Read More <span>>></span></a>
                     </div>
                     <img src = "https://lasu.edu.ng/home/newsimage/1-1722776409.jpg">
                 </article>
